--- a/exercise_02/public/index.html
+++ b/exercise_02/public/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planetas</title>
+    <title>Planets</title>
 </head>
 <body>
-    <h1>Exercício - Criando Tipos</h1>
+    <h1>Exercise - Creating Types</h1>
 
     <script src="../dist/index.js"></script>
 </body>
